src/app/equipment-details/equipment-details.component.css
h2 {
  margin: 0;
  font-size: 11px;
  background-color: #0e2d5f;
  color: white;
  padding: 2px;
  border-top: 1px solid #6f96bd;
  border-bottom: 1px solid #6f96bd;
  height: 16px;
  line-height: 16px;
}

p {
  margin: 0;
  font-size: 10px;
  color: white;
}

p.element {
  height: 16px;
}

p.element span, p.element img {
  width: 16px;
  height: 16px;
}

.passive img, h2 img {
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.esper-damage img {
  width: 24px;
  height: 24px;
  vertical-align: middle;
}

.jump img {
  width: 20px;
  height: 20px;
  vertical-align: middle;
}

.passive span {
  display: block;
}

.inactive {
  text-decoration: line-through;
}

div.weapon-trait {
  border: 2px solid #194f8d;
  border-radius: 15px;
  padding-left: 5px;
  cursor: pointer;
  min-height: 14px;
}

div.weapon-trait p {
  color: #00d01a;
}

